               - changelog download works with no deb-src lines, so
                 we don't need to instruct the user to add any
                 (Closes: #587775, #537393)

  * [curses]: Do not group packages as tasks based on their name,
              rather, use their section.  (Closes: #679602)

  * [all]: Really silence errors when debtags is not installed
           (Closes: #681021)

- Internal changes:

  * Unified the way packages are selected from command line
    arguments.

  * Use apt's CommandLine parser

    Previously aptitude was using it's own command line
    parser implemented on top of getopt.  Replacing this
    with the standard apt class means there are no longer
    subtle quirks with our parser (such as "-qq" not
    being valid when it is fine for other apt programs).

  * download_install_manager.cc:
    - repeat if package manager result is DoAgain;
    - report all download errors not just the first;

  * Use standard apt-xapian-index location, rather than libept.

  * Read tags from debtags database even when libept is
    disabled, but fall back to Packages files if the database
    is not available. (Closes: #501732)

- Cosmetic and UI bugs:

  * [cmdline]: Use arch-qualified names for virtual packages in
               more places as this is what apt-utils do.

  * [cmdline]: Most errors are now displayed at the end of a command's
               output which makes them easier to spot when there is
               lots of output. (Closes: #430392)

- Build system changes:

  * Using libept is optional and disabled by default.  Use
    --enable-ept with configure to turn it on.
    (Closes: #504153)

- Documentation:

  * [doc]: add section on exit status to the man page

- Translation updates:

  * French (Closes: #680040)
  * Polish (Closes: #678153)

[5/11/2012]
Version 0.6.8                               "Never need a reason,
                                             never need a rhyme"
